# review-artifact

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: test.yml
docs/: SECURITY.md  backends.md  configuration.md  prompts.md
examples/: diff.md  fugaku-results.toml  hpc-results.md  logs.md  review-artifact.toml
examples/sample-results/: meta.json  resource.txt  stderr.txt  stdout.txt
src/review_artifact/: __init__.py  artifacts.py  backend.py  cli.py  collect.py  config.py  findings.py  prompts.py
src/review_artifact/presets/: code_review.md  experiment_analysis.md  log_analysis.md
tests/: test_artifacts.py  test_cli.py  test_collect.py  test_config.py  test_findings.py
