[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-artifact"
version = "0.1.0"
description = "Read-only AI triage for experiment artifacts (logs, job outputs), plus diffs and files."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "review-artifact contributors" }]
keywords = ["ai", "review", "logs", "triage", "artifact", "hpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
review-artifact = "review_artifact.cli:main"

[tool.hatch.build.targets.wheel]
only-include = ["src/review_artifact"]

[tool.hatch.build.targets.wheel.sources]
"src/review_artifact" = "review_artifact"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
